--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -22,8 +22,7 @@
         <ImageView
             android:id="@+id/product_picture"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:contentDescription="@string/product_image" />
+            android:layout_height="match_parent" />
     </FrameLayout>
 
     <TextView
@@ -47,10 +46,32 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         tools:text="Rp.1.500.000"
-        android:textAlignment="center"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="@id/name_product"
         app:layout_constraintRight_toRightOf="@id/name_product"
         app:layout_constraintTop_toBottomOf="@id/name_product" />
+
+    <TextView
+        android:id="@+id/weight"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/price_product"
+        app:layout_constraintLeft_toLeftOf="@id/price_product"
+        android:text="@string/berat"
+        />
+
+    <TextView
+        android:id="@+id/weight_product"
+        android:layout_marginStart="5dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/price_product"
+        app:layout_constraintLeft_toRightOf="@id/weight"
+        app:layout_constraintRight_toRightOf="@id/container"
+        android:maxLines="1"
+        android:textStyle="bold"
+        android:textColor="@color/DarkGray"
+        tools:text="100Gr"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
