--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CartActivity">
+    tools:context=".cart.CartActivity">
 
     <ImageButton
         android:id="@+id/back"
@@ -264,6 +264,7 @@
         android:text="@string/bayar_sekarang"
         app:layout_constraintRight_toLeftOf="@id/right_divider"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="10dp"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
