--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -6,13 +6,13 @@
     android:layout_height="300dp"
     android:layout_marginEnd="10dp"
     android:background="@drawable/image_container"
-    android:backgroundTint="@color/white"
-    android:padding="20dp">
+    android:backgroundTint="@color/white">
 
     <FrameLayout
         android:id="@+id/container"
         android:layout_width="150dp"
         android:layout_height="170dp"
+        android:layout_margin="20dp"
         android:background="@drawable/image_container"
         android:padding="10dp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -73,5 +73,15 @@
         android:textStyle="bold"
         android:textColor="@color/DarkGray"
         tools:text="100Gr"
+        />
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/PrimaryColor"
+        android:id="@+id/cancel_button"
+        android:src="@drawable/ic_baseline_cancel_24"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         />
 </androidx.constraintlayout.widget.ConstraintLayout>
