--- a/cart/src/main/res/layout/activity_cart.xml
+++ b/cart/src/main/res/layout/activity_cart.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".cart.CartActivity">
+    tools:context="com.example.tokokuid.cart.CartActivity">
 
     <ImageButton
         android:id="@+id/back"
