--- a/cart/src/main/res/layout/item_cart.xml
+++ b/cart/src/main/res/layout/item_cart.xml
@@ -22,7 +22,8 @@
         <ImageView
             android:id="@+id/product_picture"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:contentDescription="@string/foto_produk" />
     </FrameLayout>
 
     <TextView
@@ -83,5 +84,5 @@
         android:src="@drawable/ic_baseline_cancel_24"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        />
+        android:contentDescription="Tombol Batalkan" />
 </androidx.constraintlayout.widget.ConstraintLayout>
