--- a/cart/src/main/res/layout/item_cart.xml
+++ b/cart/src/main/res/layout/item_cart.xml
@@ -8,23 +8,18 @@
     android:background="@drawable/image_container"
     android:backgroundTint="@color/white">
 
-    <FrameLayout
-        android:id="@+id/container"
-        android:layout_width="150dp"
-        android:layout_height="170dp"
-        android:layout_margin="20dp"
-        android:background="@drawable/image_container"
-        android:padding="10dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/product_picture"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="150dp"
+            android:layout_height="170dp"
+            android:layout_margin="20dp"
+            android:background="@drawable/image_container"
+            android:padding="10dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             android:contentDescription="@string/foto_produk" />
-    </FrameLayout>
 
     <TextView
         android:id="@+id/name_product"
@@ -37,9 +32,9 @@
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@id/price_product"
-        app:layout_constraintLeft_toLeftOf="@id/container"
-        app:layout_constraintRight_toRightOf="@id/container"
-        app:layout_constraintTop_toBottomOf="@id/container"
+        app:layout_constraintLeft_toLeftOf="@id/product_picture"
+        app:layout_constraintRight_toRightOf="@id/product_picture"
+        app:layout_constraintTop_toBottomOf="@id/product_picture"
         tools:text="Jaket Johny Ancient" />
 
     <TextView
@@ -69,7 +64,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/price_product"
         app:layout_constraintLeft_toRightOf="@id/weight"
-        app:layout_constraintRight_toRightOf="@id/container"
+        app:layout_constraintRight_toRightOf="@id/product_picture"
         android:maxLines="1"
         android:textStyle="bold"
         android:textColor="@color/DarkGray"
@@ -84,5 +79,5 @@
         android:src="@drawable/ic_baseline_cancel_24"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:contentDescription="Tombol Batalkan" />
+        android:contentDescription="@string/tombol_batalkan" />
 </androidx.constraintlayout.widget.ConstraintLayout>
