--- a/cart/src/main/res/layout/item_cart.xml
+++ b/cart/src/main/res/layout/item_cart.xml
@@ -4,22 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="300dp"
-    android:layout_marginEnd="10dp"
-    android:background="@drawable/image_container"
-    android:backgroundTint="@color/white">
+    android:layout_marginEnd="10dp">
 
 
-        <ImageView
-            android:id="@+id/product_picture"
-            android:layout_width="150dp"
-            android:layout_height="170dp"
-            android:layout_margin="20dp"
-            android:background="@drawable/image_container"
-            android:padding="10dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:contentDescription="@string/foto_produk" />
+    <ImageView
+        android:id="@+id/product_picture"
+        android:layout_width="150dp"
+        android:layout_height="170dp"
+        android:layout_margin="20dp"
+        android:background="@drawable/image_container"
+        android:contentDescription="@string/foto_produk"
+        android:padding="10dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/name_product"
@@ -41,43 +39,41 @@
         android:id="@+id/price_product"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        tools:text="Rp.1.500.000"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="@id/name_product"
         app:layout_constraintRight_toRightOf="@id/name_product"
-        app:layout_constraintTop_toBottomOf="@id/name_product" />
+        app:layout_constraintTop_toBottomOf="@id/name_product"
+        tools:text="Rp.1.500.000" />
 
     <TextView
         android:id="@+id/weight"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/price_product"
-        app:layout_constraintLeft_toLeftOf="@id/price_product"
         android:text="@string/berat"
-        />
+        app:layout_constraintLeft_toLeftOf="@id/price_product"
+        app:layout_constraintTop_toBottomOf="@id/price_product" />
 
     <TextView
         android:id="@+id/weight_product"
-        android:layout_marginStart="5dp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/price_product"
+        android:layout_marginStart="5dp"
+        android:maxLines="1"
+        android:textColor="@color/DarkGray"
+        android:textStyle="bold"
         app:layout_constraintLeft_toRightOf="@id/weight"
         app:layout_constraintRight_toRightOf="@id/product_picture"
-        android:maxLines="1"
-        android:textStyle="bold"
-        android:textColor="@color/DarkGray"
-        tools:text="100Gr"
-        />
+        app:layout_constraintTop_toBottomOf="@id/price_product"
+        tools:text="100Gr" />
 
     <ImageButton
+        android:id="@+id/cancel_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/PrimaryColor"
-        android:id="@+id/cancel_button"
+        android:contentDescription="@string/tombol_batalkan"
         android:src="@drawable/ic_baseline_cancel_24"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:contentDescription="@string/tombol_batalkan" />
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
