--- a/cart/src/main/res/layout/activity_cart.xml
+++ b/cart/src/main/res/layout/activity_cart.xml
@@ -278,18 +278,31 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toLeftOf="@id/right_divider" />
 
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/animation_empty"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:visibility="gone"
+            app:lottie_loop="true"
+            app:lottie_fileName="emptylist.json"
+            app:layout_constraintBottom_toTopOf="@id/mid_divider"
+            app:layout_constraintTop_toBottomOf="@id/top_divider"
+            app:layout_constraintLeft_toRightOf="@id/left_divider"
+            app:layout_constraintRight_toLeftOf="@id/right_divider"
+            />
         <TextView
             android:id="@+id/nullCart"
+            android:visibility="gone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/keranjang_kosong"
+            android:layout_marginTop="10dp"
             android:textAlignment="center"
             android:textColor="@color/DarkGray"
             android:textSize="20sp"
-            app:layout_constraintBottom_toBottomOf="@id/rv_cart"
-            app:layout_constraintLeft_toLeftOf="@id/rv_cart"
-            app:layout_constraintRight_toRightOf="@id/rv_cart"
-            app:layout_constraintTop_toTopOf="@id/rv_cart" />
+            app:layout_constraintLeft_toLeftOf="@id/animation_empty"
+            app:layout_constraintRight_toRightOf="@id/animation_empty"
+            app:layout_constraintTop_toBottomOf="@id/animation_empty"/>
 
         <ProgressBar
             android:id="@+id/loading"
