--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -161,5 +161,29 @@
             tools:ignore="RtlSymmetry"
             tools:listitem="@layout/item_product" />
 
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/animation_not_found"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:visibility="gone"
+            app:lottie_fileName="searchempty.json"
+            app:lottie_loop="true"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@id/product"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            />
+
+        <TextView
+            android:id="@+id/text_not_found"
+            android:visibility="gone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/not_found"
+            app:layout_constraintTop_toBottomOf="@id/animation_not_found"
+            app:layout_constraintLeft_toLeftOf="@id/animation_not_found"
+            app:layout_constraintRight_toRightOf="@id/animation_not_found"
+            />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
